# CPP-TEMPLATE

./: CMakeLists.txt  README.md  design.txt  main.cpp
tests/: test_stub.cpp
